# linterna

./: .dockerignore  .firebaserc  .gitignore  CLAUDE.md  Dockerfile  README.md  firebase.json  pyproject.toml
.claude/: settings.local.json
config/: example.yaml  router.yaml
docs/: deploy.md  milestone-1-archive.md  milestone-2-router.md  milestone-3-agent.md  milestone-4-ux.md  proposal-polaridad.md
extension/: README.md  STORE_LISTING.md  background.js  content.js  manifest.json  options.html  options.js
public/: index.html
scripts/: make_icons.py  smoke_evidence.py  smoke_factcheck.py  smoke_gemini.py  smoke_router.py
src/linterna/: __init__.py  config.py  pipeline.py  types.py
src/linterna/archive/: __init__.py  cache.py  google_factcheck.py
src/linterna/evidence/: __init__.py  brave.py  budget.py  cache.py  investigator.py  reliability.py
src/linterna/router/: __init__.py  budget.py  client.py  config.py  router.py
src/linterna/validation/: __init__.py
src/linterna/web/: __init__.py  __main__.py  app.py  main.py  page.py
tests/: test_m1_archive.py  test_m1_google_factcheck.py  test_m1_persistent_cache.py  test_m1_provider_resilience.py  test_m2_router.py  test_m2_router_resilience.py  test_m3_brave_retriever.py  test_m3_ephemeral_cache.py  test_m3_investigator.py  test_m3_json_mode.py  test_m3_pipeline.py  test_m3_reliability.py  test_m4_rate_limit.py  test_m4_web.py  test_scaffold.py
wiki/: Arquitectura.md  Contribuir.md  Esquema-de-verificación.md  Fuentes-confiables.md  Home.md  Invariantes.md
