[project]
name = "linterna"
version = "0.0.0"
description = "Capa pública y auditable de acceso a la verificación de información (archivo-primero)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }  # tradeoff abierto — ver README
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/linterna"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
